# seeg-waveform-connectivity

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: all_pairs_waveform_connectivity_config.yaml  analysis_config.yaml  connectivity_config.yaml  imf_connectivity_config.yaml  primary_car_mne_config.yaml  spectral_config.yaml  three_epoch_pairwise_config.yaml
docs/: methods.md
manuscript/: main.tex  manuscript.docx  references.bib
manuscript/tables/: table1_demographics.tex  table2_lme_results.tex
scripts/analysis/: run_all_pairs_waveform_connectivity.py  run_connectivity.py  run_electrode_time_windows.py  run_imf_connectivity.py  run_lme_analysis.py  run_mixed_effects.py  run_primary_car_mne.py  run_region_imf_analysis.py  run_rise_time_ratio.py  run_sensitivity.py  run_spectral_analysis.py  run_three_epoch_pairwise_extension.py  run_waveform.py  smoke_test.py  summarize_waveform_by_region.py  validate_all_pairs_matlab.py
scripts/figures/: assemble_figure2_waveform.py  make_connectivity_figures.py  make_control_point_violins.py  make_quinn_figures.py  (+25 more)
src/seeg_waveform/: all_pairs_waveform_connectivity.py  config.py  connectivity.py  connectivity_figures.py  control_point_figures.py  environment.yml  imf_connectivity.py  io.py  localization.py  pipeline.py  plotting.py  preprocess.py  primary_car_mne.py  primary_publication.py  publication_addons.py  pyproject.toml  quinn.py  quinn_figures.py  region_imf_analysis.py  region_labeling.py  region_quinn_figures.py  region_waveform.py  spectral.py  stats.py  three_epoch_pairwise.py
